src/objects/WEBXJobList__c.object
<CustomObject>
    <description>record processing status of exporting/importing.</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exporting</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Importing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompleteNumber__c</fullName>
        <label>Complete Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompleteTime__c</fullName>
        <label>Complete Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateTime__c</fullName>
        <label>Create Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistName__c</fullName>
        <label>Distribution List</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <label>Event ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Title</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FailedReason__c</fullName>
        <description>When the job fails, we save error information to this field. It is only for logging usage.</description>
        <label>Failed Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>Export File Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessID__c</fullName>
        <label>Process ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFUserID__c</fullName>
        <label>SF Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siteurl__c</fullName>
        <label>Site Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ready</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>running</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalNumber__c</fullName>
        <label>Total Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdatedTime__c</fullName>
        <label>Updated Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Exporting/Importing Job List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exporting/Importing Job List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>